calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/aks.mdx
---
description: Enable Calico network policy in AKS.
---

# Microsoft Azure Kubernetes Service (AKS)

## Big picture

Enable {{prodname}} in AKS managed Kubernetes service.

## Value

AKS has built-in support for {{prodname}}, providing a robust implementation of the full Kubernetes Network Policy API. AKS users wanting to go beyond Kubernetes network policy capabilities can make full use of the {{prodname}} Network Policy API.

You can also use {{prodname}} for networking on AKS in place of the default Azure VPC networking. This allows you to take advantage of the full set of {{prodname}} networking features.

## How to

### Install AKS with {{prodname}} for network policy

The geeky details of what you get:

<GeekDetails
  prodname='{{prodname}}'
  details='Policy:Calico,IPAM:Azure,CNI:Azure,Overlay:No,Routing:VPC Native,Datastore:Kubernetes'
/>

To enable {{prodname}} network policy enforcement, follow these step-by-step instructions: [Create an AKS cluster and enable network policy](https://docs.microsoft.com/en-us/azure/aks/use-network-policies).

### Install AKS with {{prodname}} networking

**Limitations**

- [Windows data plane](../windows-calico/index.mdx) is not supported.
- [eBPF data plane](../../../operations/ebpf/use-cases-ebpf.mdx) is not supported.
- [VPP data plane](https://github.com/projectcalico/vpp-dataplane) is not supported.

The geeky details of what you get:

<GeekDetails
  prodname='{{prodname}}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:VXLAN,Routing:Calico,Datastore:Kubernetes'
/>

1. Create an Azure AKS cluster with no Kubernetes CNI pre-installed. Please refer to [Bring your own CNI with AKS](https://docs.microsoft.com/en-us/azure/aks/use-byo-cni?tabs=azure-cli) for details.

   ```
    # Create a resource group
    az group create --name my-calico-rg --location westcentralus

    az aks create --resource-group my-calico-rg --name my-calico-cluster --location westcentralus --pod-cidr 192.168.0.0/16 --network-plugin none
   ```

1. Get credentials to allow you to access the cluster with `kubectl`:

   ```
   az aks get-credentials --resource-group my-calico-rg --name my-calico-cluster
   ```

1. Now that you have a cluster configured, you can install {{prodname}}.

1. Install the operator.

   ```
   kubectl create -f {{manifestsUrl}}/manifests/tigera-operator.yaml
   ```

1. Configure the {{prodname}} installation.

   ```
   kubectl create -f - <<EOF
   kind: Installation
   apiVersion: operator.tigera.io/v1
   metadata:
     name: default
   spec:
     kubernetesProvider: AKS
     cni:
       type: Calico
     calicoNetwork:
       bgp: Disabled
       ipPools:
        - cidr: 192.168.0.0/16
          encapsulation: VXLAN
   ---
   apiVersion: operator.tigera.io/v1
   kind: APIServer
   metadata:
      name: default
   spec: {}
   EOF
   ```

1. Confirm that all of the pods are running with the following command.

   ```
   watch kubectl get pods -n calico-system
   ```

   Wait until each pod has the `STATUS` of `Running`.

## Next steps

**Recommended**

- [Video: Everything you need to know about Kubernetes networking on Azure](https://www.projectcalico.org/everything-you-need-to-know-about-kubernetes-networking-on-azure/)
- [Get started with Kubernetes network policy](../../../network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx)
- [Get started with {{prodname}} network policy](../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
- [Enable default deny for Kubernetes pods](../../../network-policy/get-started/kubernetes-default-deny.mdx)
